--- a/feedback/app/views/feedback/notifications/_notification.html.erb
+++ b/feedback/app/views/feedback/notifications/_notification.html.erb
@@ -15,6 +15,6 @@
     <%= link_to(notification.notifiable.description.truncate(20), notification.notifiable) %>
   </p>
 
-  <%= button_to(t("Mark read"), notification_path(notification), method: :delete, class: "feedback-button") %>
+  <%= button_to(t("Mark read"), notification_path(notification), method: :delete, class: "feedback--button") %>
 
 </div>
