--- a/feedback/app/views/feedback/posts/_form.html.erb
+++ b/feedback/app/views/feedback/posts/_form.html.erb
@@ -3,6 +3,6 @@
     <%= f.text_area :description %>
   </div>
   <div class="actions">
-    <%= f.submit class: "feedback-button" %>
+    <%= f.submit class: "feedback--button" %>
   </div>
 <% end %>
