--- a/feedback/app/views/feedback/posts/_post.html.erb
+++ b/feedback/app/views/feedback/posts/_post.html.erb
@@ -1,10 +1,13 @@
-<div style="border: solid 0.1rem; padding: 0.4rem; margin-bottom: 1rem;">
-    Details: <%= link_to(t("Show more"), post) %>
-    <br>
-    What: <%= post.description %>
-    <br>
-    Status: <%= post.status %>
-    <br>
+<div class="feedback--post-card">
+    <h2> <%= t("Description") %> </h2>
+    <p>
+        <%= post.description %>
+    </p>
+
+    <p>
+        <strong><%= t("Status") %>:</strong> <%= Feedback::Post.human_enum_name(:status, post.status) %>
+    </p>
+
     <% if Feedback.synchronization_backend.present? %>
         Last synchronized: <%= post.last_synchronized_at %>
         <br>
@@ -13,6 +16,8 @@
     <% if post.issue_url.present? %>
         You can see it <a href=<%= post.issue_url %>> here </a>
     <% end %>
+
+    <%= link_to(t("Show more"), post) unless request.path.include?("posts/") %>
 
     <%= button_to t("synchronize"), post_synchronize_path(post) if Feedback.synchronization_backend.present? %>
 </div>
