--- a/feedback/app/views/feedback/admin/posts/_post.html.erb
+++ b/feedback/app/views/feedback/admin/posts/_post.html.erb
@@ -1,35 +1,39 @@
-<div style="border: solid 0.1rem; padding: 0.4rem; margin-bottom: 1rem;">
-  Details: <%= link_to(t("Show more"), post) %>
-  <br>
-  What: <%= post.description %>
-  <br>
-  Status: <%= post.status %>
-  <br>
-  By: <%= post.creator.name %>
-  <br>
-  <% if Feedback.synchronization_backend.present? %>
-      Last synchronized: <%= post.last_synchronized_at %>
-      <br>
-  <% end %>
+<div class="feedback--post-card">
+    <h2> <%= link_to(t("Feedback ##{post.id}"), post) %> </h2>
+    <p>
+        <%= post.description %>
+    </p>
 
-  <% if post.issue_url.present? %>
-      You can see it <a href=<%= post.issue_url %>> here </a><br>
-  <% end %>
+    <p>
+      <strong>By:</strong> <%= post.creator.name %>
+    </p>
 
-  <% if Feedback.synchronization_backend.present? %>
-    <%= button_to t("synchronize"), post_synchronize_path(post), class: "feedback--button" %>
-  <% end %>
+    <p>
+        <strong><%= t("Status") %>:</strong> <%= Feedback::Post.human_enum_name(:status, post.status) %>
+    </p>
+
+    <% if Feedback.synchronization_backend.present? %>
+        Last synchronized: <%= post.last_synchronized_at %>
+        <br>
+    <% end %>
+
+    <% if post.issue_url.present? %>
+        You can see it <a href=<%= post.issue_url %>> here </a><br>
+    <% end %>
+
+    <strong>Actions:</strong><br>
+
+    <% if post.status_new? %>
+      <%= button_to "open", open_admin_post_path(post), class: "feedback--button-to" %>
+      <%= button_to "close", close_admin_post_path(post), class: "feedback--button-to" %>
+      <%= button_to "complete", complete_admin_post_path(post), class: "feedback--button-to" %>
+    <% elsif post.status_open? %>
+      <%= button_to "close", close_admin_post_path(post), class: "feedback--button-to" %>
+      <%= button_to "complete", complete_admin_post_path(post), class: "feedback--button-to" %>
+    <% elsif post.status_closed? || post.status_completed? %>
+      <%= button_to "reopen", reopen_admin_post_path(post), class: "feedback--button-to" %>
+    <% end %>
 
 
-  <strong>Actions:</strong><br>
-  <% if post.status_new? %>
-    <%= button_to "open", open_admin_post_path(post), class: "feedback--button-to" %>
-    <%= button_to "close", close_admin_post_path(post), class: "feedback--button-to" %>
-    <%= button_to "complete", complete_admin_post_path(post), class: "feedback--button-to" %>
-  <% elsif post.status_open? %>
-    <%= button_to "close", close_admin_post_path(post), class: "feedback--button-to" %>
-    <%= button_to "complete", complete_admin_post_path(post), class: "feedback--button-to" %>
-  <% elsif post.status_closed? || post.status_completed? %>
-    <%= button_to "reopen", reopen_admin_post_path(post), class: "feedback--button-to" %>
-  <% end %>
+    <%= button_to t("synchronize"), post_synchronize_path(post) if Feedback.synchronization_backend.present? %>
 </div>
