--- a/feedback/app/views/feedback/comments/_form.html.erb
+++ b/feedback/app/views/feedback/comments/_form.html.erb
@@ -1,9 +1,8 @@
 <%= form_for [@post, Feedback::Comment.new] do |f| %>
   <div class="field">
-    <%= f.label :content, "Add comment:" %> <br />
     <%= f.text_area :content %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "feedback--button" %>
   </div>
 <% end %>
