--- a/app/views/daily_plans/_day_recipe.html.slim
+++ b/app/views/daily_plans/_day_recipe.html.slim
@@ -9,7 +9,7 @@
                 - if day_recipe.recipe.shopping?
                     span = day_recipe.recipe.name
                 - else
-                    = link_to day_recipe.recipe.name, day_recipe.recipe
+                    = link_to day_recipe.recipe.name, day_recipe.recipe, data: { turbo_frame: "_top" }
             = form.input :meal_type, collection: DailyPlanRecipe::MEAL_TYPES,
                             label: false, include_blank: true, col_span: 3,
                             input_html: { data: { action: "change->form#submit" } } unless day_recipe.shopping?
