Make modal permanent, so it's not closed on broadcast

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -53,6 +53,6 @@ html
 
       = yield
 
-    = turbo_frame_tag "modal", class: "hidden flex justify-center"
+    = turbo_frame_tag "modal", class: "hidden flex justify-center", data: { "turbo-permanent": "true" }
 
     = render("shared/mobile_navbar") if current_user.present?
