--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,16 +81,28 @@ button.dropdown-button:has( + div > ul:empty) {
 
 
 .hw-combobox {
-  width: 100%;
-  z-index: 1000;
+  /* z-index: 1000; */
 
   & .hw-combobox__main__wrapper {
-    width: 100%;
-    height: 3rem;
+    /* width: 10px; */
+    max-width: 23rem;
+    /* width: 100%; */
+    /* height: 3rem; */
     margin-top: 0.25rem;
     border-radius: 1rem;
     background-color: white;
     border-color: #6b7280;
+
+    & input {
+      border-width: 0;
+    }
+
+    & input:focus {
+      /* border-width: 0; */
+      /* border-color: red; */
+      outline: 0;
+      box-shadow: none;
+    }
 
     & input.hw-combobox__input {
       width: 100%;
@@ -103,6 +115,10 @@ button.dropdown-button:has( + div > ul:empty) {
       /* background-color: #fff; */
     }
   }
+}
+
+.hw-combobox__chip {
+  margin-right: 0.5rem;
 }
 
 #modal {
