--- a/app/views/recipe_ingredients/index.html.slim
+++ b/app/views/recipe_ingredients/index.html.slim
@@ -21,7 +21,7 @@
           - unused_ingredients = current_user.ingredients - @recipe.ingredients
           div.grid.grid-cols-2
             = select_tag :ingredient_id, grouped_options_for_select([['moje',  unused_ingredients.collect {|v| [ v.name_with_unit, v.id ] }],
-                                                                ['veřejné',  Ingredient.published.collect {|v| [ v.name_with_unit, v.id ] }],
+                                                                ['veřejné',  Ingredient.common.collect {|v| [ v.name_with_unit, v.id ] }],
                                                                 ]),
                         class: "w-80"
 
