Add description to ingredients controller

--- a/app/views/ingredients/_form.html.slim
+++ b/app/views/ingredients/_form.html.slim
@@ -1,4 +1,6 @@
-= default_form_for @ingredient do |form|
+/# locals: (ingredient:)
+
+= default_form_for ingredient do |form|
   = form.input :name, col_span: :full, autofocus: true
   = form.input :description, col_span: :full
   = form.association :measurement, col_span: 6
