Improve styling and texts

--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -5,8 +5,8 @@
 /   = searchbox(path: events_path, placeholder: placeholder, target_turbo_frame: "events")
 
 #future-events
-  .flex.justify-between
-    h2.mt-6.mb-3p
+  .flex.justify-between.mt-6
+    h2.mb-3
       = icon(:calendar, class: "mr-2")
       = "nadcházející akce".upcase
 
