Add page for managing collaborations

--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -50,6 +50,7 @@
           = user.initials
 
       span.p-3.rounded-full.border.border-peach-300
+        = link_to "přehled", event_collaboration_index_path(@event)
         = icon("user-plus")
 
 #details.sm:flex.sm:justify-between.mb-3
