--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -2,7 +2,7 @@
     = render CardComponent.new(recipe, class: local_assigns[:class]) do |card|
         = card.with_heading do
             .grid.grid-cols-2
-                = link_to(recipe.name, recipe, data: { turbo_frame: "_top" })
+                = link_to(recipe.name, published_recipe_path(id: recipe.id), data: { turbo_frame: "_top" })
                 .text-right
                     - if recipe.liked_by?(current_user)
                         = button_to liked_recipe_path(recipe), method: :delete, class: "inline-block" do
