--- a/app/views/recipes/_tasks.html.slim
+++ b/app/views/recipes/_tasks.html.slim
@@ -1,3 +1,5 @@
+/# locals: (recipe:)
+
 div
   h2.text-2xl.inline-block.me-3 = "úkoly"
   - if can? :update, recipe
@@ -10,7 +12,7 @@ div
   - else
     .grid.grid-cols-5.font-bold
       span = "název"
-      span.col-span-2 = "popis"
+      span.col-span-3 = "popis"
       span = "dní před vařením"
 
     - recipe.tasks.each do |task|
