--- a/app/views/dashboards/show.html.slim
+++ b/app/views/dashboards/show.html.slim
@@ -9,7 +9,7 @@
             = icon(:calendar)
             = "nadcházející akce".upcase
 
-        span.invisible.group-hover:visible
+        span.group-hover:visible class="#{ "invisible" if @nearest_future_event.present?}"
             = button_link_to "nová akce", new_event_path, type: :plain, data: { turbo_frame: "_top" }
 
 .sm:grid.sm:grid-cols-3.gap-4.mt-4
