--- a/app/views/event_portion_types/index.html.slim
+++ b/app/views/event_portion_types/index.html.slim
@@ -7,6 +7,7 @@
   = " > "
   = "strávníci"
 
+/ TODO: This is not ready yet
 / = render "event_attendance/menu"
 
 div id="#{dom_id(@event)}-portion-types"
@@ -20,7 +21,7 @@ div id="#{dom_id(@event)}-portion-types"
 
   = heading("Jinde použité typy porcí")
   - @unused_portion_types.each do |portion_type|
-    == render "event_portion_type", portion_type: , event: @event
+    == render "event_portion_type", portion_type:, event: @event
 
   = heading("Přidat nový typ porcí")
   == render "event_portion_type", portion_type: PortionType.new, event: @event
