"Correct" security warning, as code is not yet used

--- a/app/views/event_attendees/show.html.slim
+++ b/app/views/event_attendees/show.html.slim
@@ -1,6 +1,6 @@
 p style="color: green" = notice
 
-== render @event_attendee
+/ == render @event_attendee
 
 div
   => link_to "Edit this event attendee", edit_event_attendee_path(@event_attendee)
