--- a/app/views/event_collaboration/index.html.slim
+++ b/app/views/event_collaboration/index.html.slim
@@ -7,22 +7,51 @@
   = " > "
   = "práva"
 
-= "Autor: #{@event.author.full_name}"
+= turbo_frame_tag "modal" do
+  .modal-content data-controller="turbo-modal"
+    .flex.justify-end
+      button data-action="click->turbo-modal#hideModal keyup@window->turbo-modal#closeWithKeyboard click@window->turbo-modal#closeBackground"
+        = icon(:x, height: 24)
 
-h2.text-lg.mt-4 = "kdo další má práva?"
-= table(@event.user_event_roles) do |t|
-  = t.column :jméno do |event_role|
-    = event_role.user.name
-  = t.column :práva do |event_role|
-    = t(event_role.role)
-  = t.column :akce do |event_role|
-    - if can? :update, @event
-      = action_button_to "odebrat", event_collaboration_path(id: event_role.user_id), method: :delete
+    = heading("Nastavení sdílení pro #{@event.name}", :h1)
 
-h2 přidat spolupracovníky
-p.italic
-  | pro přidání spolupracovníků musíte znát email kterým se registrovali do aplikace
-= default_form_for "", event_collaboration_index_path(id: @event.id) do |form|
-  = form.input :email, label: "email", col_span: 3
-  = form.input :permission, label: "práva", collection: [ [ "úpravy", "collaborator" ], [ "zobrazení", "viewer" ] ], col_span: 3
-  = form.submit
+    = "Autor: #{@event.author.full_name}"
+
+    h2.text-lg.mt-4 = "kdo další má práva?"
+    = table(@event.user_event_roles) do |t|
+      = t.column :jméno do |event_role|
+        = event_role.user.name
+      = t.column :práva do |event_role|
+        = t(event_role.role)
+      = t.column :akce do |event_role|
+        - if can? :update, @event
+          = action_button_to "odebrat", event_collaboration_path(id: event_role.user_id), method: :delete
+
+    h2 přidat spolupracovníky
+    p.italic
+      | pro přidání spolupracovníků musíte znát email kterým se registrovali do aplikace
+    = default_form_for "", event_collaboration_index_path(id: @event.id) do |form|
+      = form.input :email, label: "email", col_span: 3
+      = form.input :permission, label: "práva", collection: [ [ "zobrazení", "viewer" ], [ "úpravy", "collaborator" ] ], col_span: 3, selected: "viewer"
+      = form.submit "přidat"
+
+    hr.my-8.border-top.border-peach-900
+
+    h2 zveřejnění akce
+
+    - if @event.published?
+      p = "Tato akce je zveřejněná, může si ji prohlédnout kdokoli s odkazem. Zde je veřejný odkaz:"
+
+      p data={ controller: "clipboard", "clipboard-success-content-value": "zkopírováno #{icon(:check)}"}
+        span.hidden data={ "clipboard-target": "source" } = @event.public_url
+        = button_tag "veřejný odkaz", data: { clipboard_target: "button", action: "clipboard#copy" }, class: Buttons::ButtonDefaults::DEFAULT_BUTTON_CLASSES[:secondary]
+
+      = action_button_to "zrušit zveřejnění", published_event_path(@event), method: :delete
+    - else
+      p = "Tato akce je soukromá. Akci je možné zveřejnit, pak si ji mohou prohlédnout všichni s odkazem."
+      = action_button_to "zveřejnit", published_events_path(event_id: @event.id), method: :post
+
+    - if @event.user_event_roles.any?
+      h2.text-lg.mt-4 = "kdo další má práva?"
+      - @event.user_event_roles.each do |role|
+        div = "#{role.user.name} (#{role.role})"
