Add general badge component, use it do show admin section

--- a/app/views/ingredients/index.html.slim
+++ b/app/views/ingredients/index.html.slim
@@ -10,10 +10,9 @@
 = turbo_frame_tag :ingredients
   = table @ingredients do |t|
     = t.column :jméno do |ingredient|
-      = link_to ingredient.name, ingredient, class: "font-bold text-emerald-600", data: {turbo_frame: "_top"}
+      = link_to ingredient.name, ingredient, class: "font-bold text-emerald-600", data: { turbo_frame: "_top" }
       - if ingredient.common?
-        span.ms-1
-          = svg("user-group")
+        = icon(:globe, class: "ms-1")
     = t.column :kategorie do |ingredient|
       = ingredient.category&.name
     = t.column :míra do |ingredient|
