Improve misc code, enable opening post by admin

--- a/feedback/app/views/feedback/admin/posts/_post.html.erb
+++ b/feedback/app/views/feedback/admin/posts/_post.html.erb
@@ -18,7 +18,7 @@
     <% end %>
 
     <% if post.issue_url.present? %>
-        You can see it <a href=<%= post.issue_url %>> here </a><br>
+        <strong> Remote link: </strong> <a href=<%= post.issue_url %>> here </a><br>
     <% end %>
 
     <strong>Actions:</strong><br>
