--- a/feedback/app/views/feedback/comments/_comment.html.erb
+++ b/feedback/app/views/feedback/comments/_comment.html.erb
@@ -5,7 +5,7 @@
         <br>
 
         <span class="feedback--comment-date">
-            <%= comment.created_at.strftime("%A, %B %e, %Y at %l:%M %p") %>
+            <%= l(comment.created_at, format: "%A, %e %B, %Y • %l:%M").downcase %>
         </span>
     </div>
 </div>
