--- a/feedback/app/views/feedback/posts/show.html.erb
+++ b/feedback/app/views/feedback/posts/show.html.erb
@@ -2,12 +2,22 @@
 
 <br>
 
-<h2>
-    <%= t("Comments") %>
-</h2>
+<h2> <%= t("Attachments") %> </h2>
+
+<% @post.attachments.each do |file| %>
+    <% if file.representable? %>
+        <%= image_tag main_app.url_for(file.representation(resize_to_limit: [600, 200])), class: "feedback--post-attachment" %>
+    <% else %>
+        <%= link_to rails_blob_path(file, disposition: "attachment") do %>
+            <%= image_tag "placeholder.png", alt: "Download file" %>
+        <% end %>
+    <% end %>
+<% end %>
+
+<h2> <%= t("Comments") %> </h2>
 
 <% @post.comments.each do |comment| %>
-    <%= render comment %>
+    <%= render "feedback/comments/comment", comment:  %>
 <% end %>
 
 <br>
