--- a/feedback/app/assets/stylesheets/feedback/application.css
+++ b/feedback/app/assets/stylesheets/feedback/application.css
@@ -14,6 +14,15 @@
  *= require_self
  */
 
+ form.feedback--form div.actions {
+  margin-top: 1rem;
+ }
+
+ img.feedback--post-attachment {
+  margin-top: 2rem;
+  display: inline-block;
+ }
+
  .feedback--button, .feedback--button-to {
   border: 1px solid #ccc;
   padding: 0.1rem 0.5rem;
