--- a/feedback/app/views/feedback/posts/_form.html.erb
+++ b/feedback/app/views/feedback/posts/_form.html.erb
@@ -1,8 +1,14 @@
-<%= form_for Feedback::Post.new do |f| %>
+<%= form_for Feedback::Post.new, html: { class: "feedback--form" } do |f| %>
   <div class="field">
     <%= f.text_area :description %>
   </div>
+
+  <div>
+    <%= f.file_field :attachments, multiple: true %>
+  </div>
+
   <div class="actions">
     <%= f.submit class: "feedback--button" %>
   </div>
+
 <% end %>
