Only recommend uploading images

--- a/feedback/app/views/feedback/posts/_form.html.erb
+++ b/feedback/app/views/feedback/posts/_form.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div>
-    <%= f.file_field :attachments, multiple: true %>
+    <%= f.file_field :attachments, multiple: true, accept: "image/*" %>
   </div>
 
   <div class="actions">
