--- a/app/views/published_recipes/index.html.slim
+++ b/app/views/published_recipes/index.html.slim
@@ -10,6 +10,9 @@
     = f.input :category_ids, as: :combobox, label: "kategorie", collection: RecipeCategory.all, col_span: 3, required: false, input_html: { data: { action: "change->form#submit hw-combobox:preselection->form#submitIfValue" } }, multiselect_chip_src: multiselect_chips_recipe_categories_path
     = f.input :dietary_label_ids, as: :combobox, label: "dietní omezení", collection: Label.of_category(:dietary).map { [ _1.visible_name, _1.id ] }, col_span: 3, required: false, input_html: { data: { action: "change->form#submit hw-combobox:preselection->form#submitIfValue" } }, multiselect_chip_src: multiselect_chips_labels_path
     = f.input :difficulty_label_ids, as: :combobox, label: "náročnost", collection: Label.of_category(:difficulty).map { [ _1.visible_name, _1.id ] }, col_span: 3, required: false, input_html: { data: { action: "change->form#submit hw-combobox:preselection->form#submitIfValue" } }, multiselect_chip_src: multiselect_chips_labels_path
+    .sm:col-span-3
+      = "zobrazit pouze oblíbené?"
+      = f.input :favorite, as: :boolean, label: false, input_html: { checked: params[:favorite] }
     = f.submit "Hledat", col_span: 3, class: "py-4"
 
 = turbo_frame_tag :published_recipes
