--- a/app/views/published_recipes/show.html.slim
+++ b/app/views/published_recipes/show.html.slim
@@ -22,7 +22,7 @@
       - if @recipe.procedure?
         = @recipe.procedure
       - else
-        = render CardComponent.new(class: "sm:w-1/3 border-gray-300") do |c|
+        = render CardComponent.new(class: "sm:w-1/3 border-gray-300", shadow: false) do |c|
           = c.with_body do
             span.italic = "recept nemá zadaný postup"
 
