--- a/app/views/ingredients/new.html.slim
+++ b/app/views/ingredients/new.html.slim
@@ -1,3 +1,12 @@
 - content_for :title, "přidat surovinu"
 
-== render "form", ingredient: @ingredient
+- if params[:recipe_id].present?
+  = turbo_frame_tag "modal" do
+    .modal-content data-controller="turbo-modal"
+      .flex.justify-end
+        button data-action="click->turbo-modal#hideModal keyup@window->turbo-modal#closeWithKeyboard click@window->turbo-modal#closeBackground"
+          = icon(:x, height: 24)
+
+      == render "form", ingredient: @ingredient, recipe_id: params[:recipe_id]
+- else
+  == render "form", ingredient: @ingredient, recipe_id: params[:recipe_id]
