Improve recipe template

--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -53,7 +53,7 @@
               span.italic = "recept nemá zadaný postup"
 
     - if @edited_section == :tasks
-      = render "tasks_edit", recipe: @recipe, tasks: @recipe.tasks
+      = render "tasks_edit", recipe: @recipe
     - else
       = render "tasks", recipe: @recipe
 
