Improve flash and frontpage

--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -7,8 +7,9 @@
     div class="absolute border-t-4 rounded-b px-4 py-3 shadow-md #{color_classes} right-10" role="alert" data-controller="flash" data-action="click->flash#hide"
         div class="flex"
             div class="py-1"
+                = icon(:bell)
                 / svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                     path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"
             div
-                p class="font-bold" = type.capitalize
+                p class="font-bold" = t(type)
                 p = message
