--- a/app/views/published_recipes/index.html.slim
+++ b/app/views/published_recipes/index.html.slim
@@ -24,9 +24,7 @@
           .text-center
             h2.text-bold.mb-2
               / TODO: add empty pot image/icon here
-              svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-8 w-8 mx-auto text-gray-400"
-                path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
-
+              / = icon(:placeholder)
               = "nemůžu nic najít :("
 
     - @published_recipes.each do |recipe|
