--- a/app/views/recipes/_ingredients.html.slim
+++ b/app/views/recipes/_ingredients.html.slim
@@ -4,20 +4,17 @@ div
     = heading("suroviny", :h2)
 
     form class="max-w-xs" url=recipe_path(recipe) method="get" data-controller="form" data-action="value-changed@window->form#submit" data-form-debounce-timeout-value=100
-        <label for="portion_count" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Počet porcí:</label>
-        <div class="relative flex items-center max-w-[8rem]" data-controller="input-value">
-            <button type="button" id="decrement-button" data-input-value-target="decrementer" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-s-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none disabled:bg-gray-200 disabled:hover:bg-gray-200">
-                <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 2">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h16"/>
-                </svg>
-            </button>
-            <input type="number" name="portion_count" id="portion_count" min="1" data-input-value-target="input" data-action="change->form#submit" aria-describedby="helper-text-explanation" class="bg-gray-50 border-x-0 border-gray-300 h-11 text-center text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full py-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="#{params[:portion_count] || recipe.portion_count}" />
-            <button type="button" id="increment-button" data-input-value-target="incrementer" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-e-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
-                <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16"/>
-                / </svg>
-            </button>
-        </div>
+        label for="portion_count" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" Počet porcí:
+        div class="relative flex items-center max-w-[8rem]" data-controller="input-value"
+            button type="button" id="decrement-button" data-input-value-target="decrementer" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-s-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none disabled:bg-gray-200 disabled:hover:bg-gray-200"
+                svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 2"
+                    path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h16"
+
+            input type="number" name="portion_count" id="portion_count" min="1" data-input-value-target="input" data-action="change->form#submit" aria-describedby="helper-text-explanation" class="bg-gray-50 border-x-0 border-gray-300 h-11 text-center text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full py-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="#{params[:portion_count] || recipe.portion_count}"
+
+            button type="button" id="increment-button" data-input-value-target="incrementer" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-e-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none"
+                svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18"
+                    path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16"
 
     / = default_form_for recipe, url: recipe_path(recipe), method: :get, data: { controller: "form", "form-debounce-timeout-value": 0, "turbo-frame": "#{dom_id(recipe)}-ingredients" }, class: "max-w-xs mx-auto" do |form|
         .relative.flex.items-center.max-w-[8rem]
@@ -39,4 +36,4 @@ div
         = t.column :poznámka do |r_ingredient|
             = r_ingredient.comment
 
-    = button_link_to "upravit suroviny", recipe_path(recipe, edited_section: :ingredients) if can? :update, recipe
+    = button_link_to "upravit suroviny", recipe_path(recipe, edited_section: :ingredients), type: :secondary if can? :update, recipe
