--- a/app/views/recipes/_tasks.html.slim
+++ b/app/views/recipes/_tasks.html.slim
@@ -3,7 +3,7 @@
 div
   h2.text-2xl.inline-block.me-3 = "úkoly"
   - if can? :update, recipe
-    span.float-end = button_link_to "upravit úkoly", recipe_path(recipe, edited_section: :tasks)
+    span.float-end = button_link_to "upravit úkoly", recipe_path(recipe, edited_section: :tasks), type: :secondary
 
   - if recipe.tasks.empty?
     = render CardComponent.new(class: "sm:w-1/3 border-gray-300", shadow: false) do |c|
