--- a/app/views/ingredients/show.html.slim
+++ b/app/views/ingredients/show.html.slim
@@ -10,12 +10,13 @@
 .sm:grid.sm:grid-cols-2
 
   #details.mb-3
-    = @ingredient.description
-    br
+    = simple_format(@ingredient.description)
+
     - if @ingredient.common?
-      p
-        = icon(:globe)
-        | veřejná surovina
+      p.mt-2
+        = link_to common_ingredient_path(@ingredient) do
+          = icon(:globe)
+          | veřejná surovina
 
     p
       = "měřeno na: #{@ingredient.measurement&.name}"
