--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -15,7 +15,7 @@
 
         = card.with_body do
             .grid.grid-cols-2
-                = recipe.category&.name
+                = recipe.category&.name || "bez kategorie"
                 .text-right
                     = recipe.author.name
 
